# ezira-emohekat

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  README.old.md  manifest.yaml
.github/workflows/: ci.yaml
app/: app.py
deploy/infra/: .terraform.lock.hcl  main.tf  network.tf  registry.tf  variables.tf
deploy/pre_init_account/: run.py
deploy/pre_init_infra/: run.py
deployment/: deploy_all.sh  port-forward_all.sh  postgres.yaml  test.yaml
deployment/decouple/: celery.yaml  celery_flower.yaml  example.env  rabbitmq.yaml  redis.yaml
deployment/minio/: minio.yaml
deployment/postgres/: postgres.yaml
deployment/pre_init_cluster/: run.sh
deployment/pre_init_cluster/manifests/: cert-manager-issuer.yaml  storage_class.yaml
deployment/pre_init_cluster/scripts/: cert-manager.sh  cert_manager.sh  core_dns.sh  ingress_controller.sh  lb_controller.sh  metrics_server.sh
deployment/test/: pvc.yaml
deployment/webapp/: example.env  webapp.yaml
docs/: infrastructure.drawio
infra/aws/: .terraform.lock.hcl  eks.tf  main.tf
infrastructure/aws/: eks.tf  main.tf  network.tf  registry.tf  variables.tf
infrastructure/aws/stage/: example.tfvars
ingestion/: pyproject.toml
webapp/: .dockerignore  Dockerfile  Makefile  docker-compose.yaml  example.env  make_celery.py  pyproject.toml  run.py  source.auth_ecr.sh
webapp/app/: __init__.py  models.py  routes.py  tasks.py  utils.py
webapp/data/: sample.csv
webapp/scripts/: push_ecr.sh  source.auth_ecr.sh
